--- a/.config
+++ b/.config
@@ -2142,7 +2142,7 @@ CONFIG_PACKAGE_kmod-cryptodev=y
 #
 # Filesystems
 #
-CONFIG_PACKAGE_kmod-fs-9p=y
+# CONFIG_PACKAGE_kmod-fs-9p is not set
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-btrfs=y
 CONFIG_PACKAGE_kmod-fs-cifs=y
