--- a/.config
+++ b/.config
@@ -4608,7 +4608,7 @@ CONFIG_LUCI_LANG_zh-cn=y
 
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
-CONFIG_PACKAGE_luci-mod-failsafe=y
+# CONFIG_PACKAGE_luci-mod-failsafe is not set
 CONFIG_PACKAGE_luci-mod-rpc=y
 CONFIG_PACKAGE_luci-newapi=y
 # end of 2. Modules
@@ -4787,8 +4787,8 @@ CONFIG_PACKAGE_luci-app-wrtbwmon=y
 #
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_luci-theme-material=y
-CONFIG_PACKAGE_luci-theme-netgear=y
+# CONFIG_PACKAGE_luci-theme-material is not set
+# CONFIG_PACKAGE_luci-theme-netgear is not set
 # end of 4. Themes
 
 #
